<resources>
    <string name="app_name">SkillFactoryKotlinTest</string>
    <string name="main_menu">Меню</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="search">Поиск</string>
    <string name="more">More</string>
    <string name="later">Позже</string>
    <string name="compilations">Подборки</string>
    <string name="options">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="copyrights">информация с сайта www.kinopoisk.ru</string>
    <string name="film_name">название фильма</string>
    <string name="tap_again_to_exit">для выхода нажмите еще раз</string>
    <string name="compiles_type_on_home_fragment">Тип подборки на главном экране:</string>

    <string name="now_playing_movies">уже в кино</string>
    <string name="latest_movies">новинки</string>
    <string name="upcoming_movies">скоро в кино</string>
    <string name="top_rated_movies">самые рейтинговые</string>
    <string name="popular_movies">популярные</string>

    <string name="permission_storage_denied">В доступе к памяти к телефона отказано</string>
    <string name="downloaded_into_gallery">"Постер сохранен"</string>
    <string name="to_gallery">В галерею</string>



    <!-- строки для примеров -->
    <string name="be_or_not_to_be">Быть или не быть?</string>
    <string name="be">Быть</string>
    <string name="not_to_be">Не быть</string>
    <string name="other">Эээ...</string>
    <string name="watch_this_movie">посмотри этот фильм!</string>

</resources>