<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/sample_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_big"
        android:text="@string/be_or_not_to_be">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be">
        </Button>
        <Button
            android:id="@+id/btn_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_to_be">
        </Button>
        <Button
            android:id="@+id/btn_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other">
        </Button>
    </LinearLayout>
</LinearLayout>